# spectrum

./: .gitignore  Cargo.toml  gen.sh
src/: fft.rs  main.rs  player.rs  render.rs  tone.rs
