[package]
name = "spectrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time_chart", "spectrum"]
time_chart = []
spectrum = []
db = []

[dependencies]
color-rs = "0.7.1"
enum-iterator = "1.4.1"
hound = "3.5.0"
rustfft = "6.1.0"
sdl2 = { version = "0.35.2", features = ["mixer"] }
